--- a/pages/html-css/exercises/elements.html
+++ b/pages/html-css/exercises/elements.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-    <a class="button" href="/">Home</a>
+    <a class="button" href="./../../">Home</a>
     <a class="button" href="./..">Zurück</a>
   </nav>
 
