--- a/pages/html-css/exercises/uncategorized.html
+++ b/pages/html-css/exercises/uncategorized.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-    <a class="button" href="/">Home</a>
+    <a class="button" href="./../../">Home</a>
     <a class="button" href="./..">Zurück</a>
   </nav>
 
@@ -104,7 +104,9 @@
       <li><a href="https://wiki.selfhtml.org/wiki/SELFHTML">SelfHTML</a></li>
       <li><a href="https://validator.w3.org">W3C Markup Validator</a></li>
       <li>
-        <a href="mailto:matthias.kraeusslein@tu-dresden.de">E-Mail an: Matthias Kräusslein</a>
+        <a href="mailto:matthias.kraeusslein@tu-dresden.de"
+          >E-Mail an: Matthias Kräusslein</a
+        >
       </li>
     </ul>
   </main>
