--- a/pages/html-css/index.html
+++ b/pages/html-css/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-    <a class="button" href="/">Home</a>
+    <a class="button" href="./../../">Home</a>
   </nav>
 
   <main>
@@ -29,7 +29,9 @@
 
       <tr>
         <td>
-          <a class="button" href="./exercises/uncategorized">Nicht kategorisiert</a>
+          <a class="button" href="./exercises/uncategorized"
+            >Nicht kategorisiert</a
+          >
         </td>
         <td>Übungen, die nicht zu einer Aufgabe zuzuordnen sind.</td>
       </tr>
