--- a/pages/js-tasks/index.html
+++ b/pages/js-tasks/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-    <a class="button" href="/">Home</a>
+    <a class="button" href="./../../">Home</a>
   </nav>
 
   <main>
@@ -22,7 +22,9 @@
 
       <tr>
         <td>
-          <a class="button" href="./tasks/task1">Aufgabe 1 - Zahlen sortieren</a>
+          <a class="button" href="./tasks/task1"
+            >Aufgabe 1 - Zahlen sortieren</a
+          >
         </td>
         <td>Beschreibung</td>
       </tr>
