--- a/pages/js-tasks/tasks/task1.html
+++ b/pages/js-tasks/tasks/task1.html
@@ -11,13 +11,16 @@
 
 <body>
   <nav>
-    <a class="button" href="/">Home</a>
+    <a class="button" href="./../../">Home</a>
     <a class="button" href="./..">Zurück</a>
   </nav>
 
   <main>
     <input type="number" id="inp" />
-    <button id="btn" onclick="adding(); document.getElementById('inp').value = ''">
+    <button
+      id="btn"
+      onclick="adding(); document.getElementById('inp').value = ''"
+    >
       add
     </button>
     <button id="sort" onclick="sorting()">sort</button>
