fix home for real

--- a/pages/js-tasks/tasks/task5.html
+++ b/pages/js-tasks/tasks/task5.html
@@ -39,6 +39,7 @@
       width: 300px;
       text-align: center;
     }
+
   </style>
 
   <title>Aufgabe 5 - Memory</title>
@@ -46,7 +47,7 @@
 
 <body>
   <nav>
-    <a class="button" href="./../../">Home</a>
+    <a class="button" href="./../../..">Home</a>
     <a class="button" href="./..">Zurück</a>
   </nav>
 
@@ -56,92 +57,44 @@
         <table>
           <tr>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="1"
-                onclick="slide(1)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="1" onclick="slide(1)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="2"
-                onclick="slide(2)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="2" onclick="slide(2)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="3"
-                onclick="slide(3)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="3" onclick="slide(3)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="4"
-                onclick="slide(4)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="4" onclick="slide(4)" />
             </td>
           </tr>
           <tr>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="5"
-                onclick="slide(5)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="5" onclick="slide(5)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="6"
-                onclick="slide(6)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="6" onclick="slide(6)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="7"
-                onclick="slide(7)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="7" onclick="slide(7)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="8"
-                onclick="slide(8)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="8" onclick="slide(8)" />
             </td>
           </tr>
           <tr>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="9"
-                onclick="slide(9)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="9" onclick="slide(9)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="10"
-                onclick="slide(10)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="10" onclick="slide(10)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="11"
-                onclick="slide(11)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="11" onclick="slide(11)" />
             </td>
             <td>
-              <img
-                src="./../../../img/js-tasks/Spades.svg"
-                id="12"
-                onclick="slide(12)"
-              />
+              <img src="./../../../img/js-tasks/Spades.svg" id="12" onclick="slide(12)" />
             </td>
           </tr>
         </table>
