--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" lang="de" />
-  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
   <title></title>
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-    <a class="button" href="/">Home</a>
+    <a class="button" href="./..">Home</a>
   </nav>
 
   <main></main>
