--- a/pages/js-tasks/index.html
+++ b/pages/js-tasks/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-    <a class="button" href="./../../">Home</a>
+    <a class="button" href="./../..">Home</a>
   </nav>
 
   <main>
@@ -22,37 +22,35 @@
 
       <tr>
         <td>
-          <a class="button" href="./tasks/task1"
-            >Aufgabe 1 - Zahlen sortieren</a
-          >
+          <a class="button" href="./tasks/task1.html">Aufgabe 1 - Zahlen sortieren</a>
         </td>
         <td>Beschreibung</td>
       </tr>
 
       <tr>
         <td>
-          <a class="button" href="./tasks/task2">Aufgabe 2 - Schiebepuzzle</a>
+          <a class="button" href="./tasks/task2.html">Aufgabe 2 - Schiebepuzzle</a>
         </td>
         <td>Beschreibung</td>
       </tr>
 
       <tr>
         <td>
-          <a class="button" href="./tasks/task4">Aufgabe 4 - Weihnachtsmarkt</a>
+          <a class="button" href="./tasks/task4.html">Aufgabe 4 - Weihnachtsmarkt</a>
         </td>
         <td>Beschreibung</td>
       </tr>
 
       <tr>
         <td>
-          <a class="button" href="./tasks/task5">Aufgabe 5 - Memory</a>
+          <a class="button" href="./tasks/task5.html">Aufgabe 5 - Memory</a>
         </td>
         <td>Beschreibung</td>
       </tr>
 
       <tr>
         <td>
-          <a class="button" href="./tasks/task6">Aufgabe 6 - Schuhregal</a>
+          <a class="button" href="./tasks/task6.html">Aufgabe 6 - Schuhregal</a>
         </td>
         <td>Beschreibung</td>
       </tr>
