--- a/pages/js-tasks/tasks/task2.html
+++ b/pages/js-tasks/tasks/task2.html
@@ -39,6 +39,7 @@
       border-width: 0ch;
       background-image: linear-gradient(90deg, #e8d55a, #ff0000, #e8d55a);
     }
+
   </style>
 
   <title>Aufgabe 2 - Schiebepuzzle</title>
@@ -46,7 +47,7 @@
 
 <body>
   <nav>
-    <a class="button" href="./../../">Home</a>
+    <a class="button" href="./../../..">Home</a>
     <a class="button" href="./..">Zurück</a>
   </nav>
 
