--- a/pages/js-tasks/tasks/task4.html
+++ b/pages/js-tasks/tasks/task4.html
@@ -16,6 +16,7 @@
       width: 150px;
       height: auto;
     }
+
   </style>
 
   <title>Aufgabe 4 - Weihnachtsmarkt</title>
@@ -23,7 +24,7 @@
 
 <body>
   <nav>
-    <a class="button" href="./../../">Home</a>
+    <a class="button" href="./../../..">Home</a>
     <a class="button" href="./..">Zurück</a>
   </nav>
 
@@ -32,55 +33,43 @@
       <tr>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
       </tr>
       <tr>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
+        </td>
+        <td>
+          <img src="https://kennerblick.net/grafik/w/weihnachtsbaum70.gif" id="baum" onmouseover="change()"
+            onmouseout="changeBack()" />
         </td>
         <td>
           <img
-            src="https://kennerblick.net/grafik/w/weihnachtsbaum70.gif"
-            id="baum"
-            onmouseover="change()"
-            onmouseout="changeBack()"
-          />
-        </td>
-        <td>
-          <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
       </tr>
       <tr>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
       </tr>
     </table>
