--- a/pages/js-tasks/tasks/task2.html
+++ b/pages/js-tasks/tasks/task2.html
@@ -14,31 +14,6 @@
       border: 0px solid;
       background-color: #9100cb;
     }
-
-    table {
-      margin: 0;
-      margin-top: center;
-      margin-left: center;
-      margin-right: center;
-      margin-bottom: center;
-      background-color: rgb(0, 0, 0);
-      margin: auto;
-      text-align: center;
-      font-size: 100px;
-      border-radius: 10px;
-    }
-
-    button {
-      color: rgb(0, 0, 0);
-      background-color: rgb(236, 172, 255);
-      size: 110px;
-      margin: auto;
-      font-size: 70px;
-      border-radius: 30px;
-      border-color: blueviolet;
-      border-width: 0ch;
-      background-image: linear-gradient(90deg, #e8d55a, #ff0000, #e8d55a);
-    }
   </style>
 
   <title>Aufgabe 2 - Schiebepuzzle</title>
@@ -51,25 +26,59 @@
   </nav>
 
   <main>
-    <table>
-      <tr>
-        <td id="a" onclick="move(1)"></td>
-        <td id="b" onclick="move(2)"></td>
-        <td id="c" onclick="move(3)"></td>
-      </tr>
-      <tr>
-        <td id="d" onclick="move(4)"></td>
-        <td id="e" onclick="move(5)"></td>
-        <td id="f" onclick="move(6)"></td>
-      </tr>
-      <tr>
-        <td id="g" onclick="move(7)"></td>
-        <td id="h" onclick="move(8)"></td>
-        <td id="i" onclick="move(9)"></td>
-      </tr>
-    </table>
-    <button id="newgame" onclick="newgame()">New Game</button>
-    <h1 id="time"><time>00:00:00</time></h1>
-    <h2 id="out"></h2>
+    <div>
+      <table>
+        <tr>
+          <td id="a" onclick="move(1)"></td>
+          <td id="b" onclick="move(2)"></td>
+          <td id="c" onclick="move(3)"></td>
+        </tr>
+        <tr>
+          <td id="d" onclick="move(4)"></td>
+          <td id="e" onclick="move(5)"></td>
+          <td id="f" onclick="move(6)"></td>
+        </tr>
+        <tr>
+          <td id="g" onclick="move(7)"></td>
+          <td id="h" onclick="move(8)"></td>
+          <td id="i" onclick="move(9)"></td>
+        </tr>
+      </table>
+      <button id="newgame" onclick="newgame()">New Game</button>
+      <h1 id="time"><time>00:00:00</time></h1>
+      <h2 id="out"></h2>
+    </div>
+    <div>
+      <input
+        type="radio"
+        id="picture"
+        name="choise"
+        value="pic"
+        checked="checked"
+        onchange="test()"
+      />
+      <label for="picture">Picture</label>
+      <input
+        type="radio"
+        id="number"
+        name="choise"
+        value="number"
+        onchange="test()"
+      />
+      <label for="number">Number</label>
+      <input type="text" placeholder="Enter a URL" id="link" />
+      <input type="number" placeholder="Enter the Width" id="gamewidth" />
+      <input type="number" placeholder="Enter the Height" id="gameheight" />
+      <button id="something()">generate</button>
+      <script>
+        function test() {
+          if (document.getElementById("picture").checked) {
+            document.getElementById("link").disabled = false;
+          } else if (document.getElementById("number").checked) {
+            document.getElementById("link").disabled = true;
+          }
+        }
+      </script>
+    </div>
   </main>
 </body>
