--- a/pages/js-tasks/tasks/task2.html
+++ b/pages/js-tasks/tasks/task2.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8" lang="de" />
   <link rel="stylesheet" type="text/css" href="./../../../styles/global.css" />
+  <link rel="stylesheet" href="style.css">
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   <script src="./../scripts/task2.js"></script>
 
   <style>
     td {
-      height: 200px;
-      width: 300px;
+      height: 320px;
+      width: 100px;
       text-align: center;
+      font-style: normal;
       border: 0px solid;
-      background-color: #9100cb;
+      background-image: radial-gradient(#4c075e, #000000);
+      background-color: #3f3f3f;
     }
 
     table {
@@ -21,23 +24,78 @@
       margin-left: center;
       margin-right: center;
       margin-bottom: center;
-      background-color: rgb(0, 0, 0);
+      background-color: rgb(255, 255, 255);
       margin: auto;
       text-align: center;
       font-size: 100px;
-      border-radius: 10px;
+      border-radius: 40px;
     }
 
     button {
-      color: rgb(0, 0, 0);
-      background-color: rgb(236, 172, 255);
-      size: 110px;
+      color: rgb(255, 255, 255);
+      background-color: rgb(212, 161, 227);
+      size: 10px;
       margin: auto;
-      font-size: 70px;
+      font-size: 50px;
       border-radius: 30px;
-      border-color: blueviolet;
-      border-width: 0ch;
-      background-image: linear-gradient(90deg, #e8d55a, #ff0000, #e8d55a);
+      border-color: #3b3b3b;
+      border-width: 6px;
+      background-image: linear-gradient(90deg, #552589, #7d1c96);
+      text-align: center;
+    }
+
+    h1 {
+      border: 8px solid #3b3b3b;
+      border-radius: 30px;
+      text-align: center;
+      background-color: #370643;
+    }
+
+    table .move {
+      animation: shake 0.5s ease-in-out;
+    }
+
+    @keyframes shake {
+
+      0%,
+      100% {
+        transform: translateX(0);
+      }
+
+      20% {
+        transform: translateX(-13px);
+      }
+
+      40% {
+        transform: translateX(13px);
+      }
+
+      60% {
+        transform: translateX(-8px);
+      }
+
+      80% {
+        transform: translateX(8px);
+      }
+    }
+
+    .move_left {
+      transform: translateX(33%);
+      transition: transform 0.5s ease-in;
+    }
+
+    .move_right {
+      transform: translateX(-33%);
+      transition: transform 0.5s ease-in;
+    }
+
+    .move_top {
+      transform: translateY(33%);
+      transition: transform 0.5s ease-in;
+    }
+
+    .move_bottom {
+      transform: translateY((-33%))
     }
 
   </style>
