add whole html course

--- a/pages/html-css/index.html
+++ b/pages/html-css/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" lang="de" />
   <link rel="stylesheet" type="text/css" href="./../../styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
-
   <title>HTML & CSS Übungen</title>
 </head>
 
@@ -34,6 +33,61 @@
           >
         </td>
         <td>Übungen, die nicht zu einer Aufgabe zuzuordnen sind.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/xhtml_grafikverweise_pre/index">Grafikübung</a></td>
+        <td>Eine kleine Übung zum benutzen von Bildern als verweise.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/forms_task">Formularübung 1</a></td>
+        <td>Übung zum erstellen von Formularen.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/forms_task2.html">Formularübung 2</a></td>
+        <td>Teil 2 der Übung zum erstellen von Formularen.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/auf1.html">Aufgabe 1</a></td>
+        <td>Aufgabe zum färben.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/auf2.html">Aufgabe 2</a></td>
+        <td>Aufgabe zum Formatieren von Texten.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/auf3.html">Aufgabe 3</a></td>
+        <td>Vortsetzung zur Aufgabe 2 nur mit neuerungen (z.B. Links, farbe der Links bei angeklickt, hover etc.).</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/auf4.html">Aufgabe 4-5</a></td>
+        <td>Erneute Vortsetzung diesmal mit Menubar und einer Tablle.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/auf6.html">Aufgabe 6</a></td>
+        <td>add: formatierung für tablle und einzelne passagen.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/auf7.html">Aufgabe 7</a></td>
+        <td>	add: header, footer, menubar verbessert.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/auf8.html">Aufgabe 8</a></td>
+        <td>Neue Seite mit einer Übung zum ändern der größen der einzelnen Elemente.</td>
+      </tr>
+
+      <tr>
+        <td><a class="button" href="./exercises/auf9.html">Aufgabe 9</a></td>
+        <td>zeichen bei ol verändern.</td>
       </tr>
     </table>
   </main>
