--- a/pages/html-css/exercises/auf8.html
+++ b/pages/html-css/exercises/auf8.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav>
-      <a class="button" href="./../../">Home</a>
+      <a class="button" href="./../../../">Home</a>
       <a class="button" href="./..">Zurück</a>
     </nav>
     <main>
