--- a/pages/html-css/exercises/forms_task2.html
+++ b/pages/html-css/exercises/forms_task2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" lang="de" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -11,7 +12,7 @@
   </head>
   <body>
     <nav>
-      <a class="button" href="./../../">Home</a>
+      <a class="button" href="./../../../">Home</a>
       <a class="button" href="./..">Zurück</a>
     </nav>
     <main>
