--- a/pages/html-css/index.html
+++ b/pages/html-css/index.html
@@ -22,13 +22,13 @@
       </tr>
 
       <tr>
-        <td><a class="button" href="./exercises/elements">Grundelemente</a></td>
+        <td><a class="button" href="./exercises/elements.html">Grundelemente</a></td>
         <td>Überblick über die wichtigsten HTML-Grundelemente.</td>
       </tr>
 
       <tr>
         <td>
-          <a class="button" href="./exercises/uncategorized"
+          <a class="button" href="./exercises/uncategorized.html"
             >Nicht kategorisiert</a
           >
         </td>
@@ -36,12 +36,12 @@
       </tr>
 
       <tr>
-        <td><a class="button" href="./exercises/xhtml_grafikverweise_pre/index">Grafikübung</a></td>
+        <td><a class="button" href="./exercises/xhtml_grafikverweise_pre/index.html">Grafikübung</a></td>
         <td>Eine kleine Übung zum benutzen von Bildern als verweise.</td>
       </tr>
 
       <tr>
-        <td><a class="button" href="./exercises/forms_task">Formularübung 1</a></td>
+        <td><a class="button" href="./exercises/forms_task.html">Formularübung 1</a></td>
         <td>Übung zum erstellen von Formularen.</td>
       </tr>
 
