--- a/pages/html-css/exercises/auf1.html
+++ b/pages/html-css/exercises/auf1.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <a class="button" href="./../../">Home</a>
+      <a class="button" href="./../../../">Home</a>
       <a class="button" href="./..">Zurück</a>
     </nav>
     <main>
