--- a/pages/html-css/exercises/xhtml_grafikverweise_pre/index.html
+++ b/pages/html-css/exercises/xhtml_grafikverweise_pre/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <meta charset="UTF-8" lang="de" />
   <link rel="stylesheet" type="text/css" href="./../../../../styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   <title>Grafikübung</title>
@@ -7,7 +8,7 @@
 <body>
   <nav>
     <nav>
-      <a class="button" href="./../../../">Home</a>
+      <a class="button" href="./../../../../">Home</a>
       <a class="button" href="./../../">Zurück</a>
     </nav>
   </nav>
@@ -27,7 +28,7 @@
       </tr>
       <tr>
         <td>
-          <a href="./pic_003.xhtml\"
+          <a href="./pic_003.xhtml"
             ><img src="./images/thumbs/wallpaper_thumb_002.jpg" alt=""
           /></a>
         </td>
