--- a/pages/js-tasks/tasks/task2.html
+++ b/pages/js-tasks/tasks/task2.html
@@ -45,7 +45,7 @@
   <title>Aufgabe 2 - Schiebepuzzle</title>
 </head>
 
-<body>
+<body onload="newgame()">
   <nav>
     <a class="button" href="/">Home</a>
     <a class="button" href="./..">Zurück</a>
